synchronizing message bundles.

--- a/lib/messagebundles/MessagesBundle_af.properties
+++ b/lib/messagebundles/MessagesBundle_af.properties
@@ -1488,6 +1488,8 @@ META_SEARCH_SEARCH_BUTTON_LABEL=Soek
 #? GENERAL_LAUNCH_BUTTON_LABEL=
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 #? GENERAL_LAUNCH_BUTTON_TIP=
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
