--- a/lib/messagebundles/MessagesBundle_de.properties
+++ b/lib/messagebundles/MessagesBundle_de.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=Mit dem Nutzer an dem ausgewählten Rechner chatten.
 GENERAL_LAUNCH_BUTTON_LABEL=Starten
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Startet die ausgewählte Datei.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
