--- a/lib/messagebundles/MessagesBundle_el.properties
+++ b/lib/messagebundles/MessagesBundle_el.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=\u03a3\u03c5\u03bd\u03bf\u03bc\u03b9\u03bb\u03ae\u03c3\u
 GENERAL_LAUNCH_BUTTON_LABEL=\u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=\u0386\u03bd\u03bf\u03b9\u03b3\u03bc\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
