--- a/lib/messagebundles/MessagesBundle_fi.properties
+++ b/lib/messagebundles/MessagesBundle_fi.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=Chat palvelimen kanssa.
 GENERAL_LAUNCH_BUTTON_LABEL=Avaa
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Avaa tiedosto.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
