--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=Engage une discussion avec l'hôte.
 GENERAL_LAUNCH_BUTTON_LABEL=Lancer
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Ouvre ou exécute le fichier.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
