--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=\u30db\u30b9\u30c8\u3068\u30c1\u30e3\u30c3\u30c8
 GENERAL_LAUNCH_BUTTON_LABEL=\u958b\u304f
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=\u30d5\u30a1\u30a4\u30eb\u3092\u958b\u304f
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
