--- a/lib/messagebundles/MessagesBundle_pt.properties
+++ b/lib/messagebundles/MessagesBundle_pt.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=Bate-papo com o host.
 GENERAL_LAUNCH_BUTTON_LABEL=Executar
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Executar arquivo.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
