--- a/lib/messagebundles/MessagesBundle_ru.properties
+++ b/lib/messagebundles/MessagesBundle_ru.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=\u0427\u0430\u0442 \u0441 \u0445\u043e\u0441\u0442\u043e
 GENERAL_LAUNCH_BUTTON_LABEL=\u0417\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u044c
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=\u0417\u0430\u043f\u0443\u0441\u0442\u0438\u0442\u044c \u0444\u0430\u0439\u043b
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
