--- a/lib/messagebundles/MessagesBundle_sl.properties
+++ b/lib/messagebundles/MessagesBundle_sl.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=Klepet z gostiteljem.
 GENERAL_LAUNCH_BUTTON_LABEL=Po\u017eeni
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Po\u017eene datoteko.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
