--- a/lib/messagebundles/MessagesBundle_sr.properties
+++ b/lib/messagebundles/MessagesBundle_sr.properties
@@ -1488,6 +1488,8 @@ TABLES_DISPLAY_TOOLTIPS=\u041f\u0440\u043e\u0448\u0438\u0440\u0435\u043d\u0435 \
 #? GENERAL_LAUNCH_BUTTON_LABEL=
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 #? GENERAL_LAUNCH_BUTTON_TIP=
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
