--- a/lib/messagebundles/MessagesBundle_zh.properties
+++ b/lib/messagebundles/MessagesBundle_zh.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=\u548c\u5bf9\u65b9 \u804a\u5929.
 GENERAL_LAUNCH_BUTTON_LABEL=\u8fd0\u884c
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=\u8fd0\u884c \u6587\u4ef6.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
