--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=\u062f\u0631\u062f\u0634\u0629 \u0645\u0639 \u0627\u0644
 GENERAL_LAUNCH_BUTTON_LABEL=\u0641\u062a\u062d
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=\u0641\u062a\u062d \u0627\u0644\u0645\u0644\u0641.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
