--- a/lib/messagebundles/MessagesBundle_br.properties
+++ b/lib/messagebundles/MessagesBundle_br.properties
@@ -1488,6 +1488,8 @@ LIST_EDITOR_BROWSE_BUTTON=Furchal...
 #? GENERAL_LAUNCH_BUTTON_LABEL=
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 #? GENERAL_LAUNCH_BUTTON_TIP=
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
