--- a/lib/messagebundles/MessagesBundle_ca.properties
+++ b/lib/messagebundles/MessagesBundle_ca.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=Obre un xat amb el servidor
 GENERAL_LAUNCH_BUTTON_LABEL=Executa
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Executa el fitxer
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
