--- a/lib/messagebundles/MessagesBundle_hi.properties
+++ b/lib/messagebundles/MessagesBundle_hi.properties
@@ -1488,6 +1488,8 @@ NO=\u0928\u0939\u0940\u0902
 #? GENERAL_LAUNCH_BUTTON_LABEL=
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 #? GENERAL_LAUNCH_BUTTON_TIP=
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
