--- a/lib/messagebundles/MessagesBundle_it.properties
+++ b/lib/messagebundles/MessagesBundle_it.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=Conversa con l'ospite selezionato.
 GENERAL_LAUNCH_BUTTON_LABEL=Avvia
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Avvia l'archivo.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
