--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=\u05e9\u05d7\u05d7 \u05e2\u05dd \u05de\u05d0\u05e8\u05d7
 #? GENERAL_LAUNCH_BUTTON_LABEL=
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 #? GENERAL_LAUNCH_BUTTON_TIP=
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
