--- a/lib/messagebundles/MessagesBundle_ko.properties
+++ b/lib/messagebundles/MessagesBundle_ko.properties
@@ -1488,6 +1488,8 @@ VIEW_CHOOSER_CANCEL_BUTTON_LABEL=\ucde8\uc18c
 GENERAL_LAUNCH_BUTTON_LABEL=\uc2e4\ud589
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=\uc120\ud0dd\ub41c \ud30c\uc77c \uc2e4\ud589
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
