--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=Chat met gebruiker.
 GENERAL_LAUNCH_BUTTON_LABEL=Afspelen
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Voer bestand uit.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
