--- a/lib/messagebundles/MessagesBundle_pl.properties
+++ b/lib/messagebundles/MessagesBundle_pl.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=Nawi\u0105zywanie czatu z wybranym hostem
 GENERAL_LAUNCH_BUTTON_LABEL=Za\u0142aduj
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=\u0141adowanie wybranego pliku
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
