--- a/lib/messagebundles/MessagesBundle_sv.properties
+++ b/lib/messagebundles/MessagesBundle_sv.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=Chatta med värd.
 GENERAL_LAUNCH_BUTTON_LABEL=Kör
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Kör fil.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
