--- a/lib/messagebundles/MessagesBundle_tr.properties
+++ b/lib/messagebundles/MessagesBundle_tr.properties
@@ -1488,6 +1488,8 @@ GENERAL_CHAT_BUTTON_TIP=Konakla sohbet.
 GENERAL_LAUNCH_BUTTON_LABEL=\u0130\u015flet
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Dosyay\u0131 \u0131\u015flet.
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
