--- a/lib/messagebundles/MessagesBundle_uz.properties
+++ b/lib/messagebundles/MessagesBundle_uz.properties
@@ -1488,6 +1488,8 @@ HAS_TIPS_OF_THE_DAY=false
 #? GENERAL_LAUNCH_BUTTON_LABEL=
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 #? GENERAL_LAUNCH_BUTTON_TIP=
+#### GENERAL_CLEAR_HISTORY=Clear History
+#? GENERAL_CLEAR_HISTORY=
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
