--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.8.1
+# Messages Bundle for LimeWire 4.8.2
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -1489,7 +1489,7 @@ GENERAL_LAUNCH_BUTTON_LABEL=Lancer
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Ouvre ou exécute le fichier.
 #### GENERAL_CLEAR_HISTORY=Clear History
-#? GENERAL_CLEAR_HISTORY=
+GENERAL_CLEAR_HISTORY=Effacer l'historique
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
