--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -507,7 +507,7 @@ DOWNLOAD_STATUS_COMPLETE=Complete
 DOWNLOAD_STATUS_ABORTED=Aborted
 DOWNLOAD_STATUS_FAILED=Awaiting Sources
 DOWNLOAD_STATUS_DOWNLOADING=Downloading from
-DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_IDENTIFY_CORRUPTION=Recovering Corrupted File
 DOWNLOAD_STATUS_RECOVERY_FAILED=Recovery Failed
