Change the Dutch translation of English "keyword" from "sleutelwoord" to "trefwoord". In Dutch, "sleutel" just means the material key to open a door, rather than a important guiding hint. (Thanks to Rinse de Vries for this correction).

--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -629,7 +629,7 @@ AUTO_DL_CHECKBOX_STRING=Automatisch downloaden
 #### AUTO_DL_CHECKBOX_TOOLTIP=LimeWire will download your files for you
 AUTO_DL_CHECKBOX_TOOLTIP=LimeWire zal de bestanden voor u downloaden.
 #### SEARCH_TYPE_KEYWORD=Keyword
-SEARCH_TYPE_KEYWORD=Sleutelwoord
+SEARCH_TYPE_KEYWORD=Trefwoord
 #### SEARCH_TYPE_WHATSNEW=What's New
 SEARCH_TYPE_WHATSNEW=Wat is er nieuw
 #### SEARCH_TYPE_BROWSEHOST=Direct Connect
@@ -1808,7 +1808,7 @@ ERROR_INVALID_SHARED_DIRECTORY=Ongeldige directory voor het delen van bestanden.
 #### ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manually forcing your port.
 ERROR_FORCE_IP_PORT_RANGE=Specificeer een poortnummer tussen 1 en 65535 voor het geforceerde IP-adres.
 #### ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
-ERROR_CONNECT_STRING=De 'verbindingstekst' moet minstens 1 teken hebben, 1 spatie, en mag niet een HTTP-term (zoals 'GIV', 'GET') bevatten.
+ERROR_CONNECT_STRING=De 'verbindingstekst' moet minstens 1 teken hebben, 1 spatie, en mag niet een HTTP-trefwoord (zoals 'GIV', 'GET') bevatten.
 #### ERROR_PORT_RANGE=Please enter a port between 1 and 65535.
 ERROR_PORT_RANGE=Specificeer een poortnummer tussen 1 and 65535.
 #### ERROR_INVALID_GROUP=You need to select a valid group.
@@ -1970,7 +1970,7 @@ OPTIONS_SEARCH_SPEED_MAIN_TITLE=Snelheid
 #### OPTIONS_FILTERS_MAIN_TITLE=Filters
 OPTIONS_FILTERS_MAIN_TITLE=Filters
 #### OPTIONS_RESULTS_MAIN_TITLE=Keywords
-OPTIONS_RESULTS_MAIN_TITLE=Zoektermen
+OPTIONS_RESULTS_MAIN_TITLE=Zoektrefwoord
 #### OPTIONS_MESSAGES_MAIN_TITLE=Hosts
 OPTIONS_MESSAGES_MAIN_TITLE=Gebruikers
 #### OPTIONS_ADVANCED_MAIN_TITLE=Advanced
