--- a/lib/messagebundles/MessagesBundle_fi.properties
+++ b/lib/messagebundles/MessagesBundle_fi.properties
@@ -832,7 +832,7 @@ STATISTICS_CONNECTION_CONNECTING_TIP=Otat juuri yhteyttä verkkoon.
 #### STATISTICS_CONNECTION_POOR=Poor
 STATISTICS_CONNECTION_POOR=Heikko
 #### STATISTICS_CONNECTION_POOR_TIP=You are connected to few hosts and have an unstable connection the network.
-#? STATISTICS_CONNECTION_POOR_TIP=
+STATISTICS_CONNECTION_POOR_TIP=Olet yhdistynyt liian harvaan palvelimeen ja sinulla epävarma yhteys verkkoon.
 #### STATISTICS_CONNECTION_FAIR=Fair
 STATISTICS_CONNECTION_FAIR=Kohtalainen
 #### STATISTICS_CONNECTION_FAIR_TIP=Your connection to the network is getting stronger.
@@ -1489,7 +1489,7 @@ GENERAL_LAUNCH_BUTTON_LABEL=Avaa
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Avaa tiedosto.
 #### GENERAL_CLEAR_HISTORY=Clear History
-#? GENERAL_CLEAR_HISTORY=
+GENERAL_CLEAR_HISTORY=Tyhjennä historia
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
