--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -1489,7 +1489,7 @@ GENERAL_LAUNCH_BUTTON_LABEL=Iniciar
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Iniciar archivo.
 #### GENERAL_CLEAR_HISTORY=Clear History
-#? GENERAL_CLEAR_HISTORY=
+GENERAL_CLEAR_HISTORY=Anular historia
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
