--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -1489,7 +1489,7 @@ GENERAL_LAUNCH_BUTTON_LABEL=Afspelen
 #### GENERAL_LAUNCH_BUTTON_TIP=Launch File
 GENERAL_LAUNCH_BUTTON_TIP=Voer bestand uit.
 #### GENERAL_CLEAR_HISTORY=Clear History
-#? GENERAL_CLEAR_HISTORY=
+GENERAL_CLEAR_HISTORY=Ontluchten geschiedenis
 
 ################################################################################
 # Keys/value pairs for ButtonRow labels and tooltips
