Thanks to Charles Marseille for signaling me the error I did in the translation of OPTIONS_POPUPS_LABEL.

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -2316,7 +2316,7 @@ OPTIONS_ALWAYS_USE_ANSWER=Toujours utiliser cette réponse
 #### OPTIONS_POPUPS_TITLE=Popups
 OPTIONS_POPUPS_TITLE=Boîtes de dialogues
 #### OPTIONS_POPUPS_LABEL=Redisplay messages for which you have chosen 'Do not display this message again' or 'Always use this answer'.
-OPTIONS_POPUPS_LABEL=Vous pouvez réafficher les messages pour lesquels vous avez choisi "Toujours utiliser cette réponse" ou "Toujours utiliser cette réponse"
+OPTIONS_POPUPS_LABEL=Vous pouvez réafficher les messages pour lesquels vous avez choisi "Ne plus réafficher ce message" ou "Toujours utiliser cette réponse".
 #### OPTIONS_POPUPS_DISPLAY_CHECK_BOX_LABEL=Revert To Default
 OPTIONS_POPUPS_DISPLAY_CHECK_BOX_LABEL=Réactiver les dialogues de confirmation
 
