--- a/lib/messagebundles/MessagesBundle_vi.properties
+++ b/lib/messagebundles/MessagesBundle_vi.properties
@@ -1,10 +1,10 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.2.3
+# Messages Bundle for LimeWire 4.8.6
 # Specialization for: Vietnamese - Vietnam (modern Latin script)
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=vi
-LOCALE_LANGUAGE_NAME=Ti\u1ebfng Vi\u1ec7t Nam
+LOCALE_LANGUAGE_NAME=Ti\u1ebfng Vi\u1ec7t
 LOCALE_COUNTRY_CODE=
 LOCALE_COUNTRY_NAME=Vi\u1ec7t Nam
 LOCALE_VARIANT_CODE=
@@ -44,33 +44,33 @@ HAS_TIPS_OF_THE_DAY=false
 #### GENERAL_OK_BUTTON_LABEL=OK
 GENERAL_OK_BUTTON_LABEL=OK
 #### GENERAL_OK_BUTTON_TIP=Apply Operation.
-#? GENERAL_OK_BUTTON_TIP=
+GENERAL_OK_BUTTON_TIP=Áp d\u1ee5ng thao tác.
 #### GENERAL_CANCEL_BUTTON_LABEL=Cancel
-GENERAL_CANCEL_BUTTON_LABEL=Hu\u1ef7 b\u1ecf
+GENERAL_CANCEL_BUTTON_LABEL=H\u1ee7y
 #### GENERAL_CANCEL_BUTTON_TIP=Cancel Operation.
-#? GENERAL_CANCEL_BUTTON_TIP=
+GENERAL_CANCEL_BUTTON_TIP=H\u1ee7y thao tác.
 #### GENERAL_APPLY_BUTTON_LABEL=Apply
 GENERAL_APPLY_BUTTON_LABEL=Áp d\u1ee5ng
 #### GENERAL_APPLY_BUTTON_TIP=Apply Operation.
-#? GENERAL_APPLY_BUTTON_TIP=
+GENERAL_APPLY_BUTTON_TIP=Áp d\u1ee5ng thao tác.
 #### GENERAL_CLOSE_BUTTON_LABEL=Close
 GENERAL_CLOSE_BUTTON_LABEL=\u0110óng
 #### GENERAL_CLOSE_BUTTON_TIP=Close the Window.
-#? GENERAL_CLOSE_BUTTON_TIP=
+GENERAL_CLOSE_BUTTON_TIP=Ðóng c\u1eeda s\u1ed3.
 #### GENERAL_BACK_BUTTON_LABEL=<< Back
-GENERAL_BACK_BUTTON_LABEL=<< Lùi
+GENERAL_BACK_BUTTON_LABEL=« Lùi
 #### GENERAL_NEXT_BUTTON_LABEL=Next >>
-GENERAL_NEXT_BUTTON_LABEL=T\u1edbi >>
+GENERAL_NEXT_BUTTON_LABEL=Ti\u1ebfp »
 #### GENERAL_FINISH_BUTTON_LABEL=Finish
-GENERAL_FINISH_BUTTON_LABEL=K\u1ebft thúc
+GENERAL_FINISH_BUTTON_LABEL=Thành công
 #### GENERAL_DEFAULT_BUTTON_LABEL=Use Default
-#? GENERAL_DEFAULT_BUTTON_LABEL=
+GENERAL_DEFAULT_BUTTON_LABEL=S\u1eed d\u1ee5ng m\u1eb7c \u0111\u1ecbnh
 #### GENERAL_BROWSE_BUTTON_LABEL=Browse...
-GENERAL_BROWSE_BUTTON_LABEL=Duy\u1ec7t...
+GENERAL_BROWSE_BUTTON_LABEL=Tra thý m\u1ee5c...
 #### GENERAL_BROWSE_HOST_LABEL=Browse Host
-GENERAL_BROWSE_HOST_LABEL=Duy\u1ec7t ch\u1ee7
+GENERAL_BROWSE_HOST_LABEL=Tra host
 #### GENERAL_BROWSE_HOST_TIP=View All Files on the Selected Computer
-#? GENERAL_BROWSE_HOST_TIP=
+GENERAL_BROWSE_HOST_TIP=Xem t\u1ea5t c\u1ea3 tài li\u1ec7u trên máy \u0111ang \u0111ý\u1ee3c ch\u1ecdn.
 
 ################################################################################
 # Keys/value pairs for right-click context menus.
@@ -90,15 +90,15 @@ GENERAL_BROWSE_HOST_LABEL=Duy\u1ec7t ch\u1ee7
 
 #Options
 #### OPTIONS_BUTTONS_OK_LABEL=OK
-OPTIONS_BUTTONS_OK_LABEL=OK
+#? OPTIONS_BUTTONS_OK_LABEL=
 #### OPTIONS_BUTTONS_OK_TIP=Apply Your Changes and Close Window
 #? OPTIONS_BUTTONS_OK_TIP=
 #### OPTIONS_BUTTONS_CANCEL_LABEL=Cancel
-OPTIONS_BUTTONS_CANCEL_LABEL=Hu\u1ef7 b\u1ecf
+#? OPTIONS_BUTTONS_CANCEL_LABEL=
 #### OPTIONS_BUTTONS_CANCEL_TIP=Cancel Your Changes and Close Window
 #? OPTIONS_BUTTONS_CANCEL_TIP=
 #### OPTIONS_BUTTONS_APPLY_LABEL=Apply
-OPTIONS_BUTTONS_APPLY_LABEL=Áp d\u1ee5ng
+#? OPTIONS_BUTTONS_APPLY_LABEL=
 #### OPTIONS_BUTTONS_APPLY_TIP=Apply Your Changes
 #? OPTIONS_BUTTONS_APPLY_TIP=
 #### OPTIONS_RESTART_REQUIRED=One or more options will take effect the next time LimeWire is restarted.
@@ -160,7 +160,7 @@ OPTIONS_BUTTONS_APPLY_LABEL=Áp d\u1ee5ng
 #### ABOUT_TITLE=About LimeWire
 #? ABOUT_TITLE=
 #### ABOUT_LABEL_START=LimeWire
-#? ABOUT_LABEL_START=
+ABOUT_LABEL_START=LimeWire
 #### ABOUT_LABEL_END=Copyright (c)2000-2005 Lime Wire LLC
 #? ABOUT_LABEL_END=
 #### ABOUT_LABEL_TITLE=About LimeWire
@@ -1367,7 +1367,7 @@ INIT_SAVE_BROWSE_BUTTON_LABEL=Duy\u1ec7t...
 #### META_EDITOR_SAVE_LABEL=Save
 #? META_EDITOR_SAVE_LABEL=
 #### META_EDITOR_CANCEL_LABEL=Cancel
-META_EDITOR_CANCEL_LABEL=Hu\u1ef7 b\u1ecf
+META_EDITOR_CANCEL_LABEL=H\u1ee7y
 #### META_EDITOR_DELETE_LABEL=Delete
 #? META_EDITOR_DELETE_LABEL=
 #### META_EDITOR_EDITING_LABEL=Edit annotation of type:
@@ -1380,7 +1380,7 @@ META_EDITOR_CANCEL_LABEL=Hu\u1ef7 b\u1ecf
 #### META_SEARCH_STRING=Search String
 #? META_SEARCH_STRING=
 #### META_SEARCH_CANCEL_BUTTON_LABEL=Cancel
-META_SEARCH_CANCEL_BUTTON_LABEL=Hu\u1ef7 b\u1ecf
+META_SEARCH_CANCEL_BUTTON_LABEL=H\u1ee7y
 #### META_SEARCH_SEARCH_BUTTON_LABEL=Search
 #? META_SEARCH_SEARCH_BUTTON_LABEL=
 #ViewChooserDialog
@@ -1389,7 +1389,7 @@ META_SEARCH_CANCEL_BUTTON_LABEL=Hu\u1ef7 b\u1ecf
 #### VIEW_CHOOSER_OK_BUTTON_LABEL=OK
 VIEW_CHOOSER_OK_BUTTON_LABEL=OK
 #### VIEW_CHOOSER_CANCEL_BUTTON_LABEL=Cancel
-VIEW_CHOOSER_CANCEL_BUTTON_LABEL=Hu\u1ef7 b\u1ecf
+VIEW_CHOOSER_CANCEL_BUTTON_LABEL=H\u1ee7y
 #IndentingPanel
 #### XML_SEARCH_MORE_OPTIONS_LABEL=More Search Options
 #? XML_SEARCH_MORE_OPTIONS_LABEL=
@@ -1399,7 +1399,7 @@ VIEW_CHOOSER_CANCEL_BUTTON_LABEL=Hu\u1ef7 b\u1ecf
 #### META_EDITOR_OK_BUTTON_LABEL=OK
 META_EDITOR_OK_BUTTON_LABEL=OK
 #### META_EDITOR_CANCEL_BUTTON_LABEL=Cancel
-META_EDITOR_CANCEL_BUTTON_LABEL=Hu\u1ef7 b\u1ecf
+META_EDITOR_CANCEL_BUTTON_LABEL=H\u1ee7y
 #### META_EDITOR_ADVANCED_BUTTON_LABEL=Advanced
 #? META_EDITOR_ADVANCED_BUTTON_LABEL=
 #### META_EDITOR_RESET_LABEL=Reset
