synchronizing message bundles.

--- a/lib/messagebundles/MessagesBundle_el.properties
+++ b/lib/messagebundles/MessagesBundle_el.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=\u0391\u03bd\u03b1\u03b2\u03b5\u03b2\u03bb\u03b7\u03bc\u
 DOWNLOAD_STATUS_FAILED=\u0391\u03bd\u03b1\u03bc\u03bf\u03bd\u03ae \u03b3\u03b9\u03b1 \u03c0\u03b7\u03b3\u03ad\u03c2
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=\u039b\u03ae\u03c8\u03b7 \u03b1\u03c0\u03cc
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=\u0394\u03b5\u03bd \u03bc\u03c0\u03cc\u03c1\u03b5\u03c3\u03b5 \u03bd\u03b1 \u03bc\u03b5\u03c4\u03b1\u03c6\u03b5\u03c1\u03b8\u03b5\u03af \u03c3\u03c4\u03b7\u03bd \u03b1\u03c1\u03c7\u03b5\u03b9\u03bf\u03b8\u03ae\u03ba\u03b7
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=\u03a6\u03b8\u03b1\u03c1\u03bc\u03ad\u03bd\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf
@@ -951,6 +951,10 @@ DOWNLOAD_POSSIBLE_HOSTS=\u03a0\u03b9\u03b8\u03b1\u03bd\u03bf\u03af \u03c0\u03ac\
 DOWNLOAD_BUSY_HOSTS=\u0391\u03c0\u03b1\u03c3\u03c7\u03bf\u03bb\u03b7\u03bc\u03ad\u03bd\u03bf\u03b9 \u03c0\u03ac\u03c1\u03bf\u03c7\u03bf\u03b9
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 DOWNLOAD_QUEUED_HOSTS=\u03a3\u03c4\u03b7\u03bd \u03bf\u03c5\u03c1\u03ac \u03b1\u03c0\u03cc \u03b1\u03c0\u03cc\u03c3\u03c4\u03b1\u03c3\u03b7
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_SEARCHING=\u0395\u03bd\u03c4\u03cc\u03c0\u03b9\u03c3\u03b7 \u03c0\u03b7\u03b3\u03ce\u03bd...
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
