--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=\u05d4\u05d5\u05e4\u05e1\u05e7
 DOWNLOAD_STATUS_FAILED=\u05de\u05de\u05ea\u05d9\u05df \u05dc\u05de\u05e7\u05d5\u05e8\u05d5\u05ea
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=\u05de\u05d5\u05e8\u05d9\u05d3 \u05de-
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=\u05dc\u05d0 \u05d9\u05db\u05d5\u05dc \u05dc\u05d4\u05d2\u05d9\u05e2\u05d4 \u05dc\u05e1\u05d9\u05e4\u05e8\u05d9\u05d4
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=\u05e7\u05d5\u05d1\u05e5 \u05e4\u05d2\u05d5\u05dd
@@ -951,6 +951,10 @@ DOWNLOAD_POSSIBLE_HOSTS=\u05de\u05d0\u05e8\u05db\u05d9\u05dd \u05d0\u05e4\u05e9\
 DOWNLOAD_BUSY_HOSTS=\u05de\u05d0\u05e8\u05db\u05d9\u05dd \u05ea\u05e4\u05d5\u05e1\u05d9\u05dd
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 DOWNLOAD_QUEUED_HOSTS=\u05d4\u05de\u05ea\u05e0\u05d4 \u05d0\u05e8\u05d5\u05db\u05d4
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_SEARCHING=\u05d0\u05d9\u05ea\u05d5\u05e8 \u05de\u05e7\u05d5\u05e8\u05d5\u05ea....
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
