--- a/lib/messagebundles/MessagesBundle_ro.properties
+++ b/lib/messagebundles/MessagesBundle_ro.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=Renuntat
 DOWNLOAD_STATUS_FAILED=Nu se poate descarca
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=Descarc din 
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Nu se poate muta in librarie
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=Fisier corupt
@@ -951,6 +951,10 @@ DOWNLOAD_HOSTS_LABEL=gazde
 #? DOWNLOAD_BUSY_HOSTS=
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 #? DOWNLOAD_QUEUED_HOSTS=
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 #? DOWNLOAD_SEARCHING=
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
