--- a/lib/messagebundles/MessagesBundle_ru.properties
+++ b/lib/messagebundles/MessagesBundle_ru.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=\u041d\u0435\u0443\u0434\u0430\u0447\u043d\u044b\u0439
 DOWNLOAD_STATUS_FAILED=\u041e\u0436\u0438\u0434\u0430\u043d\u0438\u0435 \u0438\u0441\u0442\u043e\u0447\u043d\u0438\u043a\u043e\u0432
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=\u0417\u0430\u0433\u0440\u0443\u0436\u0430\u044e \u0441
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=\u041d\u0435 \u043c\u043e\u0433\u0443 \u043f\u0435\u0440\u0435\u043c\u0435\u0441\u0442\u0438\u0442\u044c \u0444\u0430\u0439\u043b \u0432 \u0431\u0438\u0431\u043b\u0438\u043e\u0442\u0435\u043a\u0443
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=\u0424\u0430\u0439\u043b \u0438\u0441\u043f\u043e\u0440\u0447\u0435\u043d
@@ -951,6 +951,10 @@ DOWNLOAD_POSSIBLE_HOSTS=\u0412\u043e\u0437\u043c\u043e\u0436\u043d\u044b\u0435 \
 DOWNLOAD_BUSY_HOSTS=\u0417\u0430\u043d\u044f\u0442\u044b\u0435 \u0445\u043e\u0441\u0442\u044b
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 DOWNLOAD_QUEUED_HOSTS=\u0412 \u043e\u0447\u0435\u0440\u0435\u0434\u0438 \u043d\u0430 \u0443\u0434\u0430\u043b\u0451\u043d\u043d\u043e\u043c \u0445\u043e\u0441\u0442\u0435
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_SEARCHING=\u0418\u0449\u0443 \u0438\u0441\u0442\u043e\u0447\u043d\u0438\u043a\u0438....
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
