--- a/lib/messagebundles/MessagesBundle_vi.properties
+++ b/lib/messagebundles/MessagesBundle_vi.properties
@@ -907,7 +907,7 @@ DOWNLOAD_POPUP_MENU_BROWSE=Duy\u1ec7t ch\u1ee7
 #? DOWNLOAD_STATUS_FAILED=
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 #? DOWNLOAD_STATUS_DOWNLOADING=
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 #? DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 #? DOWNLOAD_STATUS_CORRUPT_FILE=
@@ -951,6 +951,10 @@ DOWNLOAD_HOST_LABEL=Mái ch\u1ee7
 #? DOWNLOAD_BUSY_HOSTS=
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 #? DOWNLOAD_QUEUED_HOSTS=
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 #? DOWNLOAD_SEARCHING=
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
