--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=\u062e\u0631\u0648\u062c
 DOWNLOAD_STATUS_FAILED=\u0641\u064a \u0627\u0644\u0627\u0646\u062a\u0638\u0627\u0631
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=\u062c\u0627\u0631\u064a \u0627\u0644\u062a\u0646\u0632\u064a\u0644 \u0645\u0646
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=\u0644\u0627 \u064a\u0645\u0643\u0646 \u0627\u0644\u0646\u0642\u0644 \u0625\u0644\u0649 \u0627\u0644\u0645\u0643\u062a\u0628\u0629
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=\u0627\u0644\u0645\u0644\u0641 \u063a\u064a\u0631 \u0635\u0627\u0644\u062d
@@ -951,6 +951,10 @@ DOWNLOAD_POSSIBLE_HOSTS=\u0627\u0644\u0645\u0636\u064a\u0641\u0648\u0646 \u0627\
 DOWNLOAD_BUSY_HOSTS=\u0645\u0636\u064a\u0641\u0648\u0646 \u0645\u0634\u063a\u0648\u0644\u0648\u0646
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 DOWNLOAD_QUEUED_HOSTS=\u0645\u0648\u0636\u0648\u0639 \u0641\u064a \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0627\u0646\u062a\u0638\u0627\u0631
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_SEARCHING=\u064a\u062a\u0645 \u0627\u0644\u0622\u0646 \u062a\u062d\u062f\u064a\u062f \u0645\u0648\u0627\u0642\u0639 \u0627\u0644\u0645\u0635\u0627\u062f\u0631...
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
