--- a/lib/messagebundles/MessagesBundle_ca.properties
+++ b/lib/messagebundles/MessagesBundle_ca.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=Avortat
 DOWNLOAD_STATUS_FAILED=No s'ha pogut descarregar
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=Descarregant des de 
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=No s'ha pogut traslladar a la biblioteca
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=Fitxer defectuós
@@ -951,6 +951,10 @@ DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
 DOWNLOAD_BUSY_HOSTS=Servidors ocupats
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 DOWNLOAD_QUEUED_HOSTS=A la cua distant
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 #? DOWNLOAD_SEARCHING=
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
