--- a/lib/messagebundles/MessagesBundle_da.properties
+++ b/lib/messagebundles/MessagesBundle_da.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=Afbrudt
 DOWNLOAD_STATUS_FAILED=Kunne ikke downloades
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=Downloader fra
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Kunne ikke flyttes til biblioteket
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=Ødelagt fil
@@ -951,6 +951,10 @@ DOWNLOAD_POSSIBLE_HOSTS=Mulige værter
 DOWNLOAD_BUSY_HOSTS=Travle værter
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 DOWNLOAD_QUEUED_HOSTS=Fjernkø
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_SEARCHING=Leder efter ressourcer...
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
