--- a/lib/messagebundles/MessagesBundle_fi.properties
+++ b/lib/messagebundles/MessagesBundle_fi.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=Keskeytetty
 DOWNLOAD_STATUS_FAILED=Ei voitu ladata
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=Lataa osoitteesta
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Ei voitu siirt‰‰ kirjastoon
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=Tiedosto viallinen
@@ -951,6 +951,10 @@ DOWNLOAD_POSSIBLE_HOSTS=Mahdollisia palvelimia
 DOWNLOAD_BUSY_HOSTS=Kiireellisi‰ palvelimia
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 DOWNLOAD_QUEUED_HOSTS=Et‰jonossa
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_SEARCHING=Etsin l‰hteit‰...
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
