--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=\u4e2d\u65ad\u3055\u308c\u307e\u3057\u305f
 DOWNLOAD_STATUS_FAILED=\u30bd\u30fc\u30b9\u3092\u5f85\u3061\u53d7\u3051\u3066\u3044\u307e\u3059...
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u4e2d
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=\u30e9\u30a4\u30d6\u30e9\u30ea\u3078\u79fb\u52d5\u3067\u304d\u307e\u305b\u3093
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=\u30d5\u30a1\u30a4\u30eb\u304c\u7834\u640d\u3057\u3066\u3044\u307e\u3059
@@ -951,6 +951,10 @@ DOWNLOAD_POSSIBLE_HOSTS=\u5229\u7528\u53ef\u80fd\u306a\u30db\u30b9\u30c8\u4ef6\u
 DOWNLOAD_BUSY_HOSTS=\u6df7\u96d1\u3057\u3066\u3044\u308b\u30db\u30b9\u30c8\u4ef6\u6570
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 DOWNLOAD_QUEUED_HOSTS=\u76f8\u624b\u5074\u3067\u4e88\u7d04\u3055\u308c\u305f\u30db\u30b9\u30c8\u4ef6\u6570
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_SEARCHING=\u30bd\u30fc\u30b9\u3092\u691c\u7d22\u4e2d...
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
