--- a/lib/messagebundles/MessagesBundle_sl.properties
+++ b/lib/messagebundles/MessagesBundle_sl.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=Preklicano
 DOWNLOAD_STATUS_FAILED=Ne morem prenesti
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=Prena\u0161am od
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Ne morem premakniti v knji\u017enico
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=Datoteka ima napake
@@ -951,6 +951,10 @@ DOWNLOAD_STATUS_SAVING=Shranjujem datoteko...
 #? DOWNLOAD_BUSY_HOSTS=
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 #? DOWNLOAD_QUEUED_HOSTS=
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 #? DOWNLOAD_SEARCHING=
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
