--- a/lib/messagebundles/MessagesBundle_tl.properties
+++ b/lib/messagebundles/MessagesBundle_tl.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=Hindi Pinagpatuloy
 DOWNLOAD_STATUS_FAILED=Naghihintay para sa mga source
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=Nagda-download galing sa
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Hindi mailipat sa bibliyoteka
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=Nasira ang file
@@ -951,6 +951,10 @@ DOWNLOAD_POSSIBLE_HOSTS=Mga possibleng ostiya
 DOWNLOAD_BUSY_HOSTS=Mga abalang ostiya
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 #? DOWNLOAD_QUEUED_HOSTS=
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_SEARCHING=Naghahanap ng mga pangagalingan...
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
