--- a/lib/messagebundles/MessagesBundle_tr.properties
+++ b/lib/messagebundles/MessagesBundle_tr.properties
@@ -907,7 +907,7 @@ DOWNLOAD_STATUS_ABORTED=Yar\u0131da kesildi
 DOWNLOAD_STATUS_FAILED=\u0130ndirilemedi
 #### DOWNLOAD_STATUS_DOWNLOADING=Downloading from
 DOWNLOAD_STATUS_DOWNLOADING=\u0130ndiriliyor:
-#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Could Not Move to Library
+#### DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Disk Problem
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Kütüphaneye ta\u015f\u0131namad\u0131
 #### DOWNLOAD_STATUS_CORRUPT_FILE=File Corrupted
 DOWNLOAD_STATUS_CORRUPT_FILE=Dosya bozuk
@@ -951,6 +951,10 @@ DOWNLOAD_STATUS_SAVING=Dosya kaydediliyor...
 #? DOWNLOAD_BUSY_HOSTS=
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 #? DOWNLOAD_QUEUED_HOSTS=
+#### DOWNLOAD_CHUNKS=Chunks
+#? DOWNLOAD_CHUNKS=
+#### DOWNLOAD_LOST=Lost To Corruption 
+#? DOWNLOAD_LOST=
 #### DOWNLOAD_SEARCHING=Locating Sources...
 #? DOWNLOAD_SEARCHING=
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
