Issue number:  2 added translation of chunks, and fixed typos and other tags

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -818,7 +818,7 @@ STATISTICS_FILES=archivos
 #### STATISTICS_DISCONNECTED=Disconnected / no files available
 STATISTICS_DISCONNECTED=Desconectado / no hay archivos disponibles
 #### STATISTICS_SHARING=Sharing
-STATISTICS_SHARING=Compartir
+STATISTICS_SHARING=Compartiendo
 #### STATISTICS_SHARING_TOOLTIP=The number of files you are sharing.
 STATISTICS_SHARING_TOOLTIP=La cantidad de archivos que está compartiendo.
 #### STATISTICS_CONNECTION_DISCONNECTED=Disconnected
@@ -868,9 +868,9 @@ STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire está despertando del modo durmiente
 #### DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Kill Download
 DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Detener la descarga
 #### DOWNLOAD_POPUP_MENU_RESUME=Force Resume
-DOWNLOAD_POPUP_MENU_RESUME=Canalizar la reanudación
+DOWNLOAD_POPUP_MENU_RESUME=Forzar la reanudación
 #### DOWNLOAD_POPUP_MENU_LAUNCH=Preview File
-DOWNLOAD_POPUP_MENU_LAUNCH=Iniciar archivo
+DOWNLOAD_POPUP_MENU_LAUNCH=Vista Previa
 #### DOWNLOAD_POPUP_MENU_CHAT=Chat with Host
 DOWNLOAD_POPUP_MENU_CHAT=Chat con la computadora central
 #### DOWNLOAD_POPUP_MENU_BROWSE=Browse Host
@@ -952,9 +952,9 @@ DOWNLOAD_BUSY_HOSTS=Computadoras centrales ocupadas
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
 DOWNLOAD_QUEUED_HOSTS=En cola remota
 #### DOWNLOAD_CHUNKS=Chunks
-#? DOWNLOAD_CHUNKS=
-#### DOWNLOAD_LOST=Lost To Corruption
-#? DOWNLOAD_LOST=
+DOWNLOAD_CHUNKS=Trozos
+#### DOWNLOAD_LOST=Lost To Corruption 
+DOWNLOAD_LOST=Perdido por Corrupción
 #### DOWNLOAD_SEARCHING=Locating Sources...
 DOWNLOAD_SEARCHING=Ubicando fuentes....
 #### DOWNLOAD_COULD_NOT_READ_SNAPSHOT=Sorry, but LimeWire was unable to restart your old downloads.
