options for selecting when you want to be notified of new releases.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1114,6 +1114,7 @@ OPTIONS_UPLOAD_BASIC_MAIN_TITLE=Basic
 OPTIONS_UPLOAD_SLOTS_MAIN_TITLE=Slots
 OPTIONS_CONNECTIONS_MAIN_TITLE=Connections
 OPTIONS_SHUTDOWN_MAIN_TITLE=Shutdown
+OPTIONS_UPDATE_MAIN_TITLE=Updates
 OPTIONS_CHAT_MAIN_TITLE=Chat
 OPTIONS_PLAYER_MAIN_TITLE=Player
 OPTIONS_ITUNES_MAIN_TITLE=iTunes
@@ -1295,6 +1296,15 @@ OPTIONS_SHUTDOWN_LABEL=You can choose the default shutdown behavior.
 OPTIONS_SHUTDOWN_IMMEDIATELY_LABEL=Shutdown Immediately
 OPTIONS_SHUTDOWN_AFTER_TRANSFERS_LABEL=Shutdown after Transfers
 OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimize to SystemTray
+
+################################################################################
+# Key/Value pairs for update options
+################################################################################
+OPTIONS_UPDATE_TITLE=Update Options
+OPTIONS_UPDATE_LABEL=You can choose when you want to be notified of new LimeWire releases.
+OPTIONS_UPDATE_BETA=Beta Releases
+OPTIONS_UPDATE_SERVICE=Service Releases
+OPTIONS_UPDATE_MAJOR=Major Releases
 
 ################################################################################
 # Key/Value pairs for the chat options in the options window
