Monitor tab gui fixes, including a refactoring of MonitorView.
Ability to persist state of "Show" check box is present, but commented out.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -594,8 +594,7 @@ UPLOAD_QUEUED=queued
 ###################################################################
 # Key/value pairs for MonitorView
 ###################################################################
-MONITOR_VIEW_INCOMING_SEARCHES=Incoming Searches
-MONITOR_VIEW_ENABLE=Show
+MONITOR_VIEW_INCOMING_SEARCHES=Show incoming searches
 MONITOR_VIEW_SHOW_LAST=Show last
 MONITOR_VIEW_SEARCHES=searches
 MONITOR_VIEW_LEAF_MESSAGE=Your client is a leaf node shielded by an Ultrapeer. Hence you will see few or no searches in the monitor window.
