--- a/lib/messagebundles/MessagesBundle_sr.properties
+++ b/lib/messagebundles/MessagesBundle_sr.properties
@@ -1049,10 +1049,8 @@ UPLOAD_QUEUED=\u0443 \u0440\u0435\u0434\u0443 \u0437\u0430 \u0447\u0435\u043a\u0
 ###################################################################
 # Key/value pairs for MonitorView
 ###################################################################
-#### MONITOR_VIEW_INCOMING_SEARCHES=Incoming Searches
+#### MONITOR_VIEW_INCOMING_SEARCHES=Show incoming searches
 #? MONITOR_VIEW_INCOMING_SEARCHES=
-#### MONITOR_VIEW_ENABLE=Show
-MONITOR_VIEW_ENABLE=\u041f\u0440\u0438\u043a\u0430\u0436\u0438
 #### MONITOR_VIEW_SHOW_LAST=Show last
 MONITOR_VIEW_SHOW_LAST=\u041f\u0440\u0438\u043a\u0430\u0436\u0438 \u043f\u043e\u0441\u043b\u0435\u0434\u045a\u0438\u0445
 #### MONITOR_VIEW_SEARCHES=searches
@@ -1939,6 +1937,8 @@ OPTIONS_UPLOAD_MAIN_TITLE=\u0421\u043b\u0430\u045a\u0430
 OPTIONS_CONNECTIONS_MAIN_TITLE=\u0412\u0435\u0437\u0435
 #### OPTIONS_SHUTDOWN_MAIN_TITLE=Shutdown
 #? OPTIONS_SHUTDOWN_MAIN_TITLE=
+#### OPTIONS_UPDATE_MAIN_TITLE=Updates
+#? OPTIONS_UPDATE_MAIN_TITLE=
 #### OPTIONS_CHAT_MAIN_TITLE=Chat
 OPTIONS_CHAT_MAIN_TITLE=\u0420\u0430\u0437\u0433\u043e\u0432\u043e\u0440
 #### OPTIONS_PLAYER_MAIN_TITLE=Player
@@ -2218,6 +2218,20 @@ OPTIONS_UPLOAD_BANDWIDTH_SLIDER_LABEL_LABEL=\u0421\u043b\u0430\u045a\u0430 \u043
 #? OPTIONS_SHUTDOWN_AFTER_TRANSFERS_LABEL=
 #### OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimize to SystemTray
 #? OPTIONS_SHUTDOWN_TO_TRAY_LABEL=
+
+################################################################################
+# Key/Value pairs for update options
+################################################################################
+#### OPTIONS_UPDATE_TITLE=Update Options
+#? OPTIONS_UPDATE_TITLE=
+#### OPTIONS_UPDATE_LABEL=You can choose when you want to be notified of new LimeWire releases.
+#? OPTIONS_UPDATE_LABEL=
+#### OPTIONS_UPDATE_BETA=Beta Releases
+#? OPTIONS_UPDATE_BETA=
+#### OPTIONS_UPDATE_SERVICE=Service Releases
+#? OPTIONS_UPDATE_SERVICE=
+#### OPTIONS_UPDATE_MAJOR=Major Releases
+#? OPTIONS_UPDATE_MAJOR=
 
 ################################################################################
 # Key/Value pairs for the chat options in the options window
