--- a/lib/messagebundles/MessagesBundle_zh.properties
+++ b/lib/messagebundles/MessagesBundle_zh.properties
@@ -1049,10 +1049,8 @@ UPLOAD_QUEUED=\u7b49\u5019
 ###################################################################
 # Key/value pairs for MonitorView
 ###################################################################
-#### MONITOR_VIEW_INCOMING_SEARCHES=Incoming Searches
+#### MONITOR_VIEW_INCOMING_SEARCHES=Show incoming searches
 MONITOR_VIEW_INCOMING_SEARCHES=\u8fdb\u6765\u7684 \u641c\u7d22
-#### MONITOR_VIEW_ENABLE=Show
-MONITOR_VIEW_ENABLE=\u6709\u6548
 #### MONITOR_VIEW_SHOW_LAST=Show last
 MONITOR_VIEW_SHOW_LAST=\u663e\u793a \u6700\u8fd1
 #### MONITOR_VIEW_SEARCHES=searches
@@ -1939,6 +1937,8 @@ OPTIONS_UPLOAD_SLOTS_MAIN_TITLE=\u6269\u5c55\u69fd
 OPTIONS_CONNECTIONS_MAIN_TITLE=\u8fde\u63a5
 #### OPTIONS_SHUTDOWN_MAIN_TITLE=Shutdown
 OPTIONS_SHUTDOWN_MAIN_TITLE=\u5173\u95ed
+#### OPTIONS_UPDATE_MAIN_TITLE=Updates
+#? OPTIONS_UPDATE_MAIN_TITLE=
 #### OPTIONS_CHAT_MAIN_TITLE=Chat
 OPTIONS_CHAT_MAIN_TITLE=\u804a\u5929
 #### OPTIONS_PLAYER_MAIN_TITLE=Player
@@ -2218,6 +2218,20 @@ OPTIONS_SHUTDOWN_IMMEDIATELY_LABEL=\u7acb\u5373 \u5173\u95ed
 OPTIONS_SHUTDOWN_AFTER_TRANSFERS_LABEL=\u4f20\u8f93 \u5b8c\u540e \u5173\u95ed
 #### OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimize to SystemTray
 OPTIONS_SHUTDOWN_TO_TRAY_LABEL=\u6700\u5c0f\u5316 \u5230\u7cfb\u7edf\u6258\u76d8
+
+################################################################################
+# Key/Value pairs for update options
+################################################################################
+#### OPTIONS_UPDATE_TITLE=Update Options
+#? OPTIONS_UPDATE_TITLE=
+#### OPTIONS_UPDATE_LABEL=You can choose when you want to be notified of new LimeWire releases.
+#? OPTIONS_UPDATE_LABEL=
+#### OPTIONS_UPDATE_BETA=Beta Releases
+#? OPTIONS_UPDATE_BETA=
+#### OPTIONS_UPDATE_SERVICE=Service Releases
+#? OPTIONS_UPDATE_SERVICE=
+#### OPTIONS_UPDATE_MAJOR=Major Releases
+#? OPTIONS_UPDATE_MAJOR=
 
 ################################################################################
 # Key/Value pairs for the chat options in the options window
