--- a/lib/messagebundles/MessagesBundle_af.properties
+++ b/lib/messagebundles/MessagesBundle_af.properties
@@ -1049,10 +1049,8 @@ MEDIA_STOP_BUTTON_TIP=Staak
 ###################################################################
 # Key/value pairs for MonitorView
 ###################################################################
-#### MONITOR_VIEW_INCOMING_SEARCHES=Incoming Searches
+#### MONITOR_VIEW_INCOMING_SEARCHES=Show incoming searches
 #? MONITOR_VIEW_INCOMING_SEARCHES=
-#### MONITOR_VIEW_ENABLE=Show
-#? MONITOR_VIEW_ENABLE=
 #### MONITOR_VIEW_SHOW_LAST=Show last
 #? MONITOR_VIEW_SHOW_LAST=
 #### MONITOR_VIEW_SEARCHES=searches
@@ -1939,6 +1937,8 @@ META_SEARCH_SEARCH_BUTTON_LABEL=Soek
 #? OPTIONS_CONNECTIONS_MAIN_TITLE=
 #### OPTIONS_SHUTDOWN_MAIN_TITLE=Shutdown
 #? OPTIONS_SHUTDOWN_MAIN_TITLE=
+#### OPTIONS_UPDATE_MAIN_TITLE=Updates
+#? OPTIONS_UPDATE_MAIN_TITLE=
 #### OPTIONS_CHAT_MAIN_TITLE=Chat
 #? OPTIONS_CHAT_MAIN_TITLE=
 #### OPTIONS_PLAYER_MAIN_TITLE=Player
@@ -2218,6 +2218,20 @@ META_SEARCH_SEARCH_BUTTON_LABEL=Soek
 #? OPTIONS_SHUTDOWN_AFTER_TRANSFERS_LABEL=
 #### OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimize to SystemTray
 #? OPTIONS_SHUTDOWN_TO_TRAY_LABEL=
+
+################################################################################
+# Key/Value pairs for update options
+################################################################################
+#### OPTIONS_UPDATE_TITLE=Update Options
+#? OPTIONS_UPDATE_TITLE=
+#### OPTIONS_UPDATE_LABEL=You can choose when you want to be notified of new LimeWire releases.
+#? OPTIONS_UPDATE_LABEL=
+#### OPTIONS_UPDATE_BETA=Beta Releases
+#? OPTIONS_UPDATE_BETA=
+#### OPTIONS_UPDATE_SERVICE=Service Releases
+#? OPTIONS_UPDATE_SERVICE=
+#### OPTIONS_UPDATE_MAJOR=Major Releases
+#? OPTIONS_UPDATE_MAJOR=
 
 ################################################################################
 # Key/Value pairs for the chat options in the options window
