--- a/lib/messagebundles/MessagesBundle_ar.properties
+++ b/lib/messagebundles/MessagesBundle_ar.properties
@@ -1049,10 +1049,8 @@ UPLOAD_QUEUED=\u0641\u064a \u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0627\u06
 ###################################################################
 # Key/value pairs for MonitorView
 ###################################################################
-#### MONITOR_VIEW_INCOMING_SEARCHES=Incoming Searches
+#### MONITOR_VIEW_INCOMING_SEARCHES=Show incoming searches
 MONITOR_VIEW_INCOMING_SEARCHES=\u0646\u062a\u0627\u0626\u062c \u0627\u0644\u0628\u062d\u062b \u0627\u0644\u0648\u0627\u0631\u062f\u0629
-#### MONITOR_VIEW_ENABLE=Show
-MONITOR_VIEW_ENABLE=\u0645\u0645\u0643\u0651\u0646
 #### MONITOR_VIEW_SHOW_LAST=Show last
 MONITOR_VIEW_SHOW_LAST=\u0623\u0638\u0647\u0631 \u0622\u062e\u0631
 #### MONITOR_VIEW_SEARCHES=searches
@@ -1939,6 +1937,8 @@ OPTIONS_UPLOAD_SLOTS_MAIN_TITLE=\u0627\u0644\u0634\u0631\u0627\u0626\u062d
 OPTIONS_CONNECTIONS_MAIN_TITLE=\u0627\u062a\u0635\u0627\u0644\u0627\u062a
 #### OPTIONS_SHUTDOWN_MAIN_TITLE=Shutdown
 OPTIONS_SHUTDOWN_MAIN_TITLE=\u0625\u064a\u0642\u0627\u0641 \u0627\u0644\u062a\u0634\u063a\u064a\u0644
+#### OPTIONS_UPDATE_MAIN_TITLE=Updates
+#? OPTIONS_UPDATE_MAIN_TITLE=
 #### OPTIONS_CHAT_MAIN_TITLE=Chat
 OPTIONS_CHAT_MAIN_TITLE=\u062f\u0631\u062f\u0634\u0629
 #### OPTIONS_PLAYER_MAIN_TITLE=Player
@@ -2218,6 +2218,20 @@ OPTIONS_SHUTDOWN_IMMEDIATELY_LABEL=\u0625\u064a\u0642\u0627\u0641 \u0627\u0644\u
 OPTIONS_SHUTDOWN_AFTER_TRANSFERS_LABEL=\u0625\u064a\u0642\u0627\u0641 \u0627\u0644\u062a\u0634\u063a\u064a\u0644 \u0628\u0639\u062f \u0627\u0644\u0627\u0646\u062a\u0647\u0627\u0621 \u0645\u0646 \u0627\u0644\u062a\u062d\u0648\u064a\u0644\u0627\u062a
 #### OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimize to SystemTray
 OPTIONS_SHUTDOWN_TO_TRAY_LABEL=\u062a\u0635\u063a\u064a\u0631 \u0644\u0645\u0646\u0637\u0642\u0629 \u0627\u0644\u0625\u0639\u0644\u0627\u0645
+
+################################################################################
+# Key/Value pairs for update options
+################################################################################
+#### OPTIONS_UPDATE_TITLE=Update Options
+#? OPTIONS_UPDATE_TITLE=
+#### OPTIONS_UPDATE_LABEL=You can choose when you want to be notified of new LimeWire releases.
+#? OPTIONS_UPDATE_LABEL=
+#### OPTIONS_UPDATE_BETA=Beta Releases
+#? OPTIONS_UPDATE_BETA=
+#### OPTIONS_UPDATE_SERVICE=Service Releases
+#? OPTIONS_UPDATE_SERVICE=
+#### OPTIONS_UPDATE_MAJOR=Major Releases
+#? OPTIONS_UPDATE_MAJOR=
 
 ################################################################################
 # Key/Value pairs for the chat options in the options window
