- Replace the French translation of "vendor" from "vendeur" to "distributor", because not all servents are sold; this is more appropriate with open-sourced softwares, and better qualifies both the software itself and its supporting team. - Add new items for "Updates" options.

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -172,7 +172,7 @@ ABOUT_CREDITS_TIP=Affiche les informations de remerciements pour les auteurs et 
 #### ABOUT_NOTICE_LABEL=Notice
 ABOUT_NOTICE_LABEL=Notice
 #### ABOUT_NOTICE_TIP=Display distribution and contact information.
-ABOUT_NOTICE_TIP=Affiche les informations de contact ou relatives à la distribution.
+ABOUT_NOTICE_TIP=Affiche les informations de contact ou relatives à la distribution du logiciel.
 #### ABOUT_LICENSE_LABEL=License
 ABOUT_LICENSE_LABEL=License
 #### ABOUT_LICENSE_TIP=Display the license agreement about this software.
@@ -699,7 +699,7 @@ RESULT_PANEL_LOCATION=Hôte(s)
 #### RESULT_PANEL_COUNT=#
 RESULT_PANEL_COUNT=Nb.
 #### RESULT_PANEL_VENDOR=Vendor
-RESULT_PANEL_VENDOR=Vendeur/Version
+RESULT_PANEL_VENDOR=Distribution
 #### RESULT_PANEL_ADDED=Created
 RESULT_PANEL_ADDED=Créé
 #### RESULT_PANEL_LICENSE=License
@@ -892,7 +892,7 @@ DOWNLOAD_SPEED_COLUMN=Vitesse
 #### DOWNLOAD_TIME_REMAINING_COLUMN=Time
 DOWNLOAD_TIME_REMAINING_COLUMN=Temps
 #### DOWNLOAD_SERVER_COLUMN=Vendor/Version
-DOWNLOAD_SERVER_COLUMN=Marque/Version
+DOWNLOAD_SERVER_COLUMN=Distribution/version
 #### DOWNLOAD_STATUS_QUEUED=Queued
 DOWNLOAD_STATUS_QUEUED=En file d'attente
 #### DOWNLOAD_STATUS_CONNECTING=Connecting...
@@ -1012,7 +1012,7 @@ UPLOAD_TABLE_STRING_SPEED=Vitesse
 #### UPLOAD_TABLE_STRING_TIME_REMAINING=Time
 UPLOAD_TABLE_STRING_TIME_REMAINING=Temps
 #### UPLOAD_TABLE_STRING_USER_AGENT=Vendor/Version
-UPLOAD_TABLE_STRING_USER_AGENT=Marque/Version
+UPLOAD_TABLE_STRING_USER_AGENT=Distribution/version
 #### UPLOAD_TABLE_STRING_CONNECTING=Connecting
 UPLOAD_TABLE_STRING_CONNECTING=Connexion
 #### UPLOAD_TABLE_STRING_UPLOADING=Uploading
@@ -1101,7 +1101,7 @@ CV_COLUMN_HOSTS=Hôtes
 #### CV_COLUMN_PROTOCOL=Protocol
 CV_COLUMN_PROTOCOL=Protocole
 #### CV_COLUMN_VENDOR=Vendor/Version
-CV_COLUMN_VENDOR=Vendeur/Version
+CV_COLUMN_VENDOR=Distribution/version
 #### CV_COLUMN_TIME=Time
 CV_COLUMN_TIME=Durée
 #### CV_COLUMN_COMPRESSION=Compressed (I/O)
@@ -1938,7 +1938,7 @@ OPTIONS_CONNECTIONS_MAIN_TITLE=Connexions
 #### OPTIONS_SHUTDOWN_MAIN_TITLE=Shutdown
 OPTIONS_SHUTDOWN_MAIN_TITLE=Fermeture
 #### OPTIONS_UPDATE_MAIN_TITLE=Updates
-#? OPTIONS_UPDATE_MAIN_TITLE=
+OPTIONS_UPDATE_MAIN_TITLE=Mises à jour
 #### OPTIONS_CHAT_MAIN_TITLE=Chat
 OPTIONS_CHAT_MAIN_TITLE=Discussion
 #### OPTIONS_PLAYER_MAIN_TITLE=Player
@@ -2223,15 +2223,15 @@ OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Réduire dans la barre de notification
 # Key/Value pairs for update options
 ################################################################################
 #### OPTIONS_UPDATE_TITLE=Update Options
-#? OPTIONS_UPDATE_TITLE=
+OPTIONS_UPDATE_TITLE=Options de mise à jour
 #### OPTIONS_UPDATE_LABEL=You can choose when you want to be notified of new LimeWire releases.
-#? OPTIONS_UPDATE_LABEL=
+OPTIONS_UPDATE_LABEL=Vous pouvez choisir quand vous voulezrecevoir les notifications de nouvelles versions de Limewire.
 #### OPTIONS_UPDATE_BETA=Beta Releases
-#? OPTIONS_UPDATE_BETA=
+OPTIONS_UPDATE_BETA=Pré-versions bêta
 #### OPTIONS_UPDATE_SERVICE=Service Releases
-#? OPTIONS_UPDATE_SERVICE=
+OPTIONS_UPDATE_SERVICE=Correctifs de maintenance
 #### OPTIONS_UPDATE_MAJOR=Major Releases
-#? OPTIONS_UPDATE_MAJOR=
+OPTIONS_UPDATE_MAJOR=Versions majeures
 
 ################################################################################
 # Key/Value pairs for the chat options in the options window
@@ -3658,7 +3658,7 @@ ERROR_PING_REPLY_INVALID_ADDRESS=Adresse invalide de pong
 #### ERROR_PING_REPLY_INVALID_GGEP=Invalid GGEP Block
 ERROR_PING_REPLY_INVALID_GGEP=Block GGEP invalide de pong
 #### ERROR_PING_REPLY_INVALID_VENDOR=Invalid Vendor Length
-ERROR_PING_REPLY_INVALID_VENDOR=Longueur invalide de vendeur
+ERROR_PING_REPLY_INVALID_VENDOR=Longueur invalide de distributeur
 #### ERROR_ALL_PUSH_ERRORS=All Push Errors
 ERROR_ALL_PUSH_ERRORS=Tous les mandats erronés
 #### ERROR_PUSH_INVALID_PORT=Invalid Push Port
